[package]
name = "united-flarmnet"
version = "0.1.0"
description = "Merging FlarmNet, OGN and WeGlide live tracking data into a single FlarmNet file"
authors = ["Tobias Bieniek <tobias.bieniek@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Turbo87/united-flarmnet.git"
keywords = ["flarm", "flarmnet", "ogn", "glider", "gliding"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.97"
deunicode = "=1.6.0"
encoding_rs = "=0.8.35"
flarmnet = "=0.5.0"
http-cache-reqwest = "=0.15.1"
reqwest = { version = "=0.12.14", features = ["json", "rustls-tls"], default-features = false }
reqwest-middleware = "=0.4.1"
reqwest-retry = "=0.7.0"
reqwest-tracing = "=0.5.6"
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
time = { version = "=0.3.39", features = ["serde-well-known"] }
tokio = { version = "=1.44.0", features = ["macros", "rt-multi-thread"] }
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter"] }
