[package]
name = "united-flarmnet"
version = "0.1.0"
description = "Merging FlarmNet, OGN and WeGlide live tracking data into a single FlarmNet file"
authors = ["Tobias Bieniek <tobias.bieniek@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Turbo87/united-flarmnet.git"
keywords = ["flarm", "flarmnet", "ogn", "glider", "gliding"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.100"
deunicode = "=1.6.2"
encoding_rs = "=0.8.35"
flarmnet = "=0.5.0"
http-cache-reqwest = "=0.15.1"
reqwest = { version = "=0.12.23", features = ["json", "rustls-tls"], default-features = false }
reqwest-middleware = "=0.4.2"
reqwest-retry = "=0.7.0"
reqwest-tracing = "=0.5.8"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.148"
time = { version = "=0.3.44", features = ["serde-well-known"] }
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.20", features = ["env-filter"] }

[dev-dependencies]
insta = { version = "=1.43.1", features = ["json"] }
